--- a/public/404.html
+++ b/public/404.html
@@ -1,67 +1,108 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>The page you were looking for doesn't exist (404)</title>
-  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>BigTalker - The page you were looking for doesn't exist (404)</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link type="text/css" rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
   <style>
+  html, body {
+    width: 100%;
+    height: 100%;
+  }
   body {
-    background-color: #EFEFEF;
-    color: #2E2F30;
-    text-align: center;
+    background-color: #039be6;
+    color: #fff;
     font-family: arial, sans-serif;
     margin: 0;
+    display: table;
   }
-
-  div.dialog {
-    width: 95%;
-    max-width: 33em;
-    margin: 4em auto 0;
+  div.wrapper {
+    display: table-cell; 
+    text-align: center;
+    vertical-align: middle;
   }
-
-  div.dialog > div {
-    border: 1px solid #CCC;
-    border-right-color: #999;
-    border-left-color: #999;
-    border-bottom-color: #BBB;
-    border-top: #B00100 solid 4px;
-    border-top-left-radius: 9px;
-    border-top-right-radius: 9px;
-    background-color: white;
-    padding: 7px 12% 0;
-    box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
+  img.logo {
+    margin: 0 auto;
   }
-
-  h1 {
-    font-size: 100%;
-    color: #730E15;
-    line-height: 1.5em;
+  p.big-number {
+    font-size: 160px;
+    font-weight: bolder;
+    line-height: 160px;
   }
-
-  div.dialog > p {
-    margin: 0 0 1em;
-    padding: 1em;
-    background-color: #F7F7F7;
-    border: 1px solid #CCC;
-    border-right-color: #999;
-    border-left-color: #999;
-    border-bottom-color: #999;
-    border-bottom-left-radius: 4px;
-    border-bottom-right-radius: 4px;
-    border-top-color: #DADADA;
-    color: #666;
-    box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
+  p.not-found {
+    font-size: 22px;
+    font-weight: bolder;
+  }
+  p.message {
+    font-size: 18px;
+    color: #b2e8e2;
+  }
+  div.link-wrapper {
+    margin-top: 25px;
+  }
+  div.link-wrapper a {
+    border: 2px solid #fff;
+    border-radius: 30px;
+    color: #fff;
+    display: block;
+    font-size: 18px;
+    margin: 15px auto;
+    padding: 15px;
+    text-decoration: none;
+    width: 200px;
+  }
+  div.link-wrapper a:hover, div.link-wrapper a:active {
+    background-color: #2780E3;
+  }
+  @media (max-width: 374px) {
+    p.big-number {
+      font-size: 120px;
+      font-weight: bolder;
+      line-height: 120px;
+    }
+    p.not-found {
+      font-size: 16px;
+    }
+    p.message {
+      font-size: 15px;
+      color: #b2e8e2;
+    }
+    div.link-wrapper a {
+      font-size: 16px;
+      margin: 10px auto;
+      padding: 10px;
+      width: 200px;
+    }
   }
   </style>
 </head>
 
 <body>
   <!-- This file lives in public/404.html -->
-  <div class="dialog">
-    <div>
-      <h1>The page you were looking for doesn't exist.</h1>
-      <p>You may have mistyped the address or the page may have moved.</p>
+  <div class="container wrapper">
+    <div class="row">
+      <div class="col-md-12">
+        <div class="logo-wrapper text-center">
+          <a href="http://bigtalker.io">
+            <img src="https://s23.postimg.org/h6p8dxs4b/Big_Talker_logo_higher_res.png" alt="BigTalker" class="logo img-responsive">
+          </a>
+        </div>
+
+        <div class="404-wrapper">
+          <p class="big-number">404</p>
+        </div>
+      </div>
     </div>
-    <p>If you are the application owner check the logs for more information.</p>
+    <div class="text-wrapper">
+      <p class="not-found">THIS PAGE DOES NOT EXIST</p>
+      <p class="message">Please try one of the following pages:</p>
+    </div>
+    <div class="link-wrapper">
+      <a href="http://www.bigtalker.io">Home Page</a>
+      <a href="http://www.bigtalker.io/workshops">BigTalker Talks</a>
+      <a href="http://www.bigtalker.io/contact">Contact Us</a>
+    </div>
   </div>
 </body>
 </html>
