add 500 page, minor change in 404 page

--- a/public/404.html
+++ b/public/404.html
@@ -89,19 +89,20 @@
           </a>
         </div>
 
-        <div class="404-wrapper">
+        <div class="wrapper-404">
           <p class="big-number">404</p>
         </div>
+
+        <div class="text-wrapper">
+          <p class="not-found">THIS PAGE DOES NOT EXIST</p>
+          <p class="message">Please try one of the following pages:</p>
+        </div>
+        <div class="link-wrapper">
+          <a href="http://www.bigtalker.io">Home Page</a>
+          <a href="http://www.bigtalker.io/workshops">BigTalker Talks</a>
+          <a href="http://www.bigtalker.io/contact">Contact Us</a>
+        </div>
       </div>
-    </div>
-    <div class="text-wrapper">
-      <p class="not-found">THIS PAGE DOES NOT EXIST</p>
-      <p class="message">Please try one of the following pages:</p>
-    </div>
-    <div class="link-wrapper">
-      <a href="http://www.bigtalker.io">Home Page</a>
-      <a href="http://www.bigtalker.io/workshops">BigTalker Talks</a>
-      <a href="http://www.bigtalker.io/contact">Contact Us</a>
     </div>
   </div>
 </body>
