--- a/public/500.html
+++ b/public/500.html
@@ -1,66 +1,115 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>We're sorry, but something went wrong (500)</title>
+  <title>BigTalker - We're sorry, but something went wrong (500)</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
+  <link type="text/css" rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
   <style>
   body {
-    background-color: #EFEFEF;
-    color: #2E2F30;
-    text-align: center;
+    background-color: #e01818;
+    color: #fff;
     font-family: arial, sans-serif;
     margin: 0;
   }
-
-  div.dialog {
-    width: 95%;
-    max-width: 33em;
-    margin: 4em auto 0;
+  div.wrapper {
+    text-align: center;
   }
-
-  div.dialog > div {
-    border: 1px solid #CCC;
-    border-right-color: #999;
-    border-left-color: #999;
-    border-bottom-color: #BBB;
-    border-top: #B00100 solid 4px;
-    border-top-left-radius: 9px;
-    border-top-right-radius: 9px;
-    background-color: white;
-    padding: 7px 12% 0;
-    box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
+  div.wrapper-500 {
+    background-color: #ffffff;
+    padding-top: 50px;
   }
-
-  h1 {
-    font-size: 100%;
-    color: #730E15;
-    line-height: 1.5em;
+  img {
+    margin: 0 auto;
   }
-
-  div.dialog > p {
-    margin: 0 0 1em;
-    padding: 1em;
-    background-color: #F7F7F7;
-    border: 1px solid #CCC;
-    border-right-color: #999;
-    border-left-color: #999;
-    border-bottom-color: #999;
-    border-bottom-left-radius: 4px;
-    border-bottom-right-radius: 4px;
-    border-top-color: #DADADA;
-    color: #666;
-    box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
+  .img-500 {
+    max-width: 300px; 
+  }
+  p.message {
+    font-size: 20px;
+    color: #ccbbb5;
+  }
+  div.link-wrapper {
+    margin-top: 20px;
+  }
+  div.link-wrapper a {
+    border: 2px solid #fff;
+    border-radius: 30px;
+    color: #fff;
+    display: inline-block;
+    font-size: 18px;
+    margin: 15px auto;
+    padding: 15px;
+    text-decoration: none;
+    min-width: 200px;
+  }
+  div.link-wrapper a:hover, div.link-wrapper a:active {
+    background-color: #d11010;
+  }
+  @media (max-width: 519px) {
+    div.text {
+      text-align: left;
+    }
+    h1 {
+      font-size: 30px;
+    }
+    p.message {
+      font-size: 18px;
+    }
+  }
+  @media (max-width: 434px) {
+    div.wrapper-500 {
+      padding-top: 25px;
+    }
+    h1 {
+      font-size: 26px;
+    }
+    div.link-wrapper {
+      margin-top: 15px;
+    }
+    div.link-wrapper a {
+      margin: 5px auto;
+    }
+  }
+  @media (max-width: 375px) {
+    div.wrapper-500 {
+      padding-top: 15px;
+    }
+    h1 {
+      font-size: 22px;
+    }
+    p.message {
+      font-size: 16px;
+      margin-bottom: 5px;
+    }
   }
   </style>
 </head>
 
 <body>
   <!-- This file lives in public/500.html -->
-  <div class="dialog">
-    <div>
-      <h1>We're sorry, but something went wrong.</h1>
+  <div class="wrapper">
+    <div class="wrapper-500">
+      <img src="https://s30.postimg.org/9gtitrna9/500_red.png" alt="BigTalker 500" class="img-responsive img-500">
     </div>
-    <p>If you are the application owner check the logs for more information.</p>
+    <div class="container">
+      <img src="https://s23.postimg.org/h6p8dxs4b/Big_Talker_logo_higher_rescasdcasd.png" alt="BigTalker" class="logo img-responsive">
+      
+      <div class="text">
+        <h1>SOMETHING WENT WRONG</h1>
+        <p class="message">Our page currently has some technical issues</p>
+        <p class="message">Try again later, and if it still doesn't work, let us know</p>
+        <p class="message">Sorry for any inconvenience</p>
+      </div>
+      <div class="link-wrapper">
+        <a href="javascript:void(0)" onclick="goBack()">Back</a>
+        <a href="mailto:dave@bigtalker.io?Subject=BigTalker%20500%20Error%20Message&Body=I%20have%20experienced%20500%20error%20on%20BigTalker.io%20and%20would%20like%20to%20inform%20you%20about%20the%20issue.%0A%0ACheers." target="_top">Contact Us</a>
+      </div>
+    </div>
   </div>
+  <script>
+    function goBack() {
+      window.history.back();
+    }
+    </script>
 </body>
 </html>
